--- a/views/user/shop.ejs
+++ b/views/user/shop.ejs
@@ -76,7 +76,7 @@
             <nav class="navbar navbar-expand-lg navbar-light main_box">
                 <div class="container">
                  
-                    <a class="navbar-brand logo_h" href="/"><img src="img/logo.png" alt=""></a>
+                    <a class="navbar-brand logo_h" href="/"><img src="/img/shopIcon.png" alt="img" width="100"></a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="icon-bar"></span>
