fix bugs admin in dashboard & user side in add repay btn in order detail pay

--- a/views/admin/adminDashboard.ejs
+++ b/views/admin/adminDashboard.ejs
@@ -208,16 +208,16 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-3 border-5">
+                    <!-- <div class="col-md-3 border-5">
                         <div class="card text-center"  style="color:#4D869C;border:1px solid #4D869C !important;">
                             <div class="card-body">
                                 <i class="fas fa-wallet fa-2x"></i>
                                 <h5 class="card-title">Today's Money</h5>
-                                <p class="card-text">$0k</p>
+                                <p class="card-text">₹0</p>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-md-3">
+                    </div> -->
+                    <div class="col-md-6">
                         <div class="card text-center" style="color:#4D869C;border:1px solid #4D869C !important;">
                             <div class="card-body">
                                 <i class="fas fa-users fa-2x"></i>
@@ -226,7 +226,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-6">
                         <div class="card text-center" style="color:#4D869C;border:1px solid #4D869C !important;">
                             <div class="card-body">
                                 <i class="fas fa-shopping-cart fa-2x"></i>
@@ -235,15 +235,15 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <!-- <div class="col-md-3">
                         <div class="card text-center" style="color:#4D869C;border:1px solid #4D869C !important;">
                             <div class="card-body">
-                                <i class="fas fa-dollar-sign fa-2x"></i>
+                                <i class="fa-solid fa-indian-rupee-sign fa-2x"></i>
                                 <h5 class="card-title">Sales</h5>
-                                <p class="card-text">$0</p>
+                                <p class="card-text">₹0</p>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
                 <div class="row mt-3">
                     <div class="col-md-6">
