--- a/views/user/checkout.ejs
+++ b/views/user/checkout.ejs
@@ -339,6 +339,12 @@
     const totalPrice = parseFloat(document.getElementById('discountedPrice').value);
     
     if (totalPrice > 1000) {
+      const paraNode = document.createElement('p')
+      paraNode.innerText = "Sorry  COD  option Not available to purchase product above ₹1000 or choose online payment to continue "
+      paraNode.style.color='red'
+
+      codRadio.parentElement.appendChild(paraNode)
+      
       codRadio.disabled = true;
       codRadio.checked = false;
       codRadio.parentElement.style.opacity = '0.5';
@@ -411,6 +417,8 @@
  
 
   function initiateRazorpayPayment() {
+    // const discountedPrice = parseFloat(document.getElementById('discountedPrice').value);
+    // console.log("Discounted Price (before conversion):", discountedPrice); 
     fetch('/createRazorpayOrder', {
       method: 'POST',
       headers: {
@@ -422,17 +430,18 @@
       })
     })
     .then(response => {
-      // console.log("response >>>>> ",response.json());
       return  response.json()
      
     })
     .then(data => {
+      console.log(data);
+      
       var options = {
         "key": razorpayKeyId,
-        "amount": data.amount,
+        "amount": data.order.amount,
         "currency": "INR",
-        "name": "Your Company Name",
-        "description": "Purchase Description",
+        "name": "Step Heaven",
+        "description": "NO.1",
         "order_id": data.id,
         // "callback_url": ,
         // "redirect":true,
