--- a/views/user/orderHistory.ejs
+++ b/views/user/orderHistory.ejs
@@ -38,6 +38,13 @@
 	<script defer src="js/owl.carousel.min.js"></script>
 	<script defer src="js/main.js"></script>
 
+	 <!-- razor pay  -->
+
+	 <script defer src="https://checkout.razorpay.com/v1/checkout.js"></script>
+
+	 <!-- SweetAlert -->
+	 <script defer src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
 	<!-- Icon -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css" integrity="sha512-dPXYcDub/aeb08c63jRq/k6GaKccl256JQy/AnOq7CAnEZ9FzSL9wSbcZkMp4R26vBsMLFYH4kQ67/bbV8XaCQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
@@ -130,7 +137,7 @@
 					
 
 
-					<div class="col-auto w-100">
+					<div class="col-auto w-100  d-flex align-items-center justify-content-between">
 						<% 
 						const variant = item.product.variants.find(variant => variant?.color === item.variant?.color);
 						if (variant && variant.imageUrls && variant.imageUrls.length > 0) {
@@ -139,6 +146,11 @@
 						<% } else { %>
 							<img class="img-fluid mt-4 rounded-3" src="" class="card-img-top" alt="No Image Available">
 						<% } %>
+						<%if(details.orderStatus==='Pending'){%>
+							<div>
+						    <button class="btn btn-primary" onclick="confirmReOrder('<%=details._id%>',<%=details.totalPrice%>)">Repay</button>	
+						   </div>
+						<%}%>
 					</div>
 
 
@@ -298,10 +310,110 @@ Copyright &copy;&nbsp;<script>document.write(new Date().getFullYear());</script>
             });
         });
 
-        // function removeRow(button) {
-        //     const row = button.closest('tr');
-        //     row.parentNode.removeChild(row);
-        // }
+
+		function confirmReOrder(orderId,totalPrice) {
+			// console.log(orderId,totalPrice);
+			
+        const amount = totalPrice
+        // console.log("totalPrices >>> ",totalPrices);
+        // console.log("confirmReOrder >>> ",orderId);
+        Swal.fire({
+            title: 'Repay this order?',
+            text: 'you will be redirected to payment gateway',
+            icon: 'question',
+            showCancelButton: true,
+            confirmButtonColor: '#3085d6',
+            cancelButtonColor: '#d33',
+            confirmButtonText: 'Yes, repay it!'
+        }).then((result) => {
+            if (result.isConfirmed) {
+                fetch('/createRazorpayOrder',{
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json',
+                    },
+                    body: JSON.stringify({ amount:amount*100})
+                })
+                .then(response => response.json())
+                .then(data => {
+                    console.log("createRazorpayOrder >>> ",data);
+                    if(data.success){
+                        
+                        const options = {
+                           "key": '<%=process.env.RAZORPAY_KEY_ID%>',
+                           "amount": data.order.amount,
+                           "currency": data.order.currency,
+                            "name": "Y",
+                            "description": "Reorder",
+                            "order_id": data.order.id,
+                            "handler": function(response){
+                                handlePaymentSuccess(response,orderId);
+                            },
+                        //    "prefill":{
+                        //         name: '<%# =checkOut.address.username%>',
+                        //         email: '<%# =checkOut.address.email%>',
+                        //     },
+                            "theme": {
+                                color: "#3399cc"
+                            }
+                        };
+                        const rzp1 = new Razorpay(options);
+                        rzp1.open();
+                    }else{
+                        Swal.fire('Error!', data.message, 'error');
+                    }
+            })
+            .catch(error => {
+                console.error('Error:', error);
+                Swal.fire(
+                    'Error!',
+                    'An error occurred while processing your request.',
+                    'error'
+                );
+            });
+    }})
+    }
+
+	function handlePaymentSuccess(response,orderId){
+        console.log("handlePaymentSuccess >>> ",response);
+        fetch('/handleReorderPayment',{
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json',
+            },
+            body: JSON.stringify({
+                orderId: orderId,
+                razorpayPaymentId: response.razorpay_payment_id,
+                razorpayOrderId: response.razorpay_order_id,
+                razorpaySignature: response.razorpay_signature
+            })
+        })
+        .then(response => response.json())
+        .then(data => {
+            console.log("handlePaymentSuccess >>> ",data);
+            if(data.success){
+                Swal.fire('Success!', 'Your order has been reordered.', 'success')
+                .then(() => {
+                    window.location.href = data.redirectUrl;
+                })
+            }else{
+                Swal.fire('Error!', data.message, 'error');
+            }
+        })
+        .catch(error => {
+            console.error('Error:', error);
+            Swal.fire(
+                'Error!',
+                'An error occurred while processing your request.',
+                'error'
+            );
+        })
+            
+    }
+
+
+
+     
     </script>
 </body>
 </html>
