--- a/views/admin/adminDashboard.ejs
+++ b/views/admin/adminDashboard.ejs
@@ -221,7 +221,7 @@
                         <div class="card text-center" style="color:#4D869C;border:1px solid #4D869C !important;">
                             <div class="card-body">
                                 <i class="fas fa-users fa-2x"></i>
-                                <h5 class="card-title">Today's Users</h5>
+                                <h5 class="card-title">Total Users</h5>
                                 <p class="card-text"><%=user?.length%></p>
                             </div>
                         </div>
