--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wish List</title>
+    <title>StepHeaven</title>
 
     <link rel="shortcut icon" href="img/fav.png">
 
